bug fixed: wiki syntax consequently use <em> instead of <i> in order to be compatible with html5 bug fixed: add "white-space: normal" and "width: 100%" to the style sheet in order to make line wrapping in the legend of the radaio buttons work in Internet Explorer

--- a/webclient/standard.css
+++ b/webclient/standard.css
@@ -241,11 +241,13 @@ input[type="range"]::-ms-fill-lower {
 */
 .votingOption {
 	border: 2px solid #6678b1;
+	width: 100%; /* needed for Internet Explorer to line wrap the legend */
+	white-space: normal; /* needed for Internet Explorer to line wrap the legend */
 }
 
 .votingOption h1{
 	color: darkblue !important;
-	font-size: 24px;
+	font-size: 18px;
 }
 
 
